# java-flow-mapper

./: .gitignore  AGENTS.md  CODEBASE_REASONING_TOPOLOGY.md  Cargo.toml  README.md  RULES.md  WORKLOG.md
crates/jfm-cli/: Cargo.toml
crates/jfm-cli/src/: cli.rs  main.rs
crates/jfm-cli/tests/: flow_demo.rs
crates/jfm-cli/tests/snapshots/: flow_demo__flow_delete_users_by_id_renders_expected_json.snap  flow_demo__flow_delete_users_by_id_renders_expected_markdown.snap  flow_demo__flow_delete_users_by_id_renders_expected_mermaid.snap  flow_demo__flow_delete_users_by_id_renders_expected_mermaid_flowchart.snap  flow_demo__flow_get_users_active_renders_expected_json.snap  flow_demo__flow_get_users_active_renders_expected_markdown.snap  flow_demo__flow_get_users_active_renders_expected_mermaid.snap  flow_demo__flow_get_users_active_renders_expected_mermaid_flowchart.snap  flow_demo__flow_get_users_active_with_max_depth_2_renders_truncated_mermaid_flowchart.snap  flow_demo__flow_get_users_by_id_renders_expected_json.snap  flow_demo__flow_get_users_by_id_renders_expected_markdown.snap  flow_demo__flow_get_users_by_id_renders_expected_mermaid.snap  flow_demo__flow_get_users_by_id_renders_expected_mermaid_flowchart.snap  flow_demo__flow_get_users_by_id_with_max_depth_2_renders_truncated_json.snap  flow_demo__flow_get_users_by_id_with_max_depth_2_renders_truncated_markdown.snap  flow_demo__flow_get_users_by_id_with_max_depth_2_renders_truncated_mermaid.snap  flow_demo__flow_get_users_renders_expected_json.snap  flow_demo__flow_get_users_renders_expected_markdown.snap  flow_demo__flow_get_users_renders_expected_mermaid.snap  flow_demo__flow_get_users_renders_expected_mermaid_flowchart.snap  flow_demo__flow_post_users_renders_expected_json.snap  flow_demo__flow_post_users_renders_expected_markdown.snap  flow_demo__flow_post_users_renders_expected_mermaid.snap  flow_demo__flow_post_users_renders_expected_mermaid_flowchart.snap  flow_demo__flow_put_users_by_id_renders_expected_json.snap  flow_demo__flow_put_users_by_id_renders_expected_markdown.snap  flow_demo__flow_put_users_by_id_renders_expected_mermaid.snap  flow_demo__flow_put_users_by_id_renders_expected_mermaid_flowchart.snap
crates/jfm-flow/: Cargo.toml
crates/jfm-graph/: Cargo.toml
crates/jfm-graph/src/: lib.rs
crates/jfm-graph/tests/: round_trip.rs
crates/jfm-model/: Cargo.toml
crates/jfm-parser/: Cargo.toml
crates/jfm-render/: Cargo.toml
crates/jfm-spring/: Cargo.toml
demo-api/demo/: pom.xml
src/: cli.rs  flow.rs  main.rs  model.rs
src/flow/: expand.rs  external.rs  node.rs  resolve.rs
src/parser/: annotations.rs  (+6 more)
tests/: flow_demo.rs
(+64 files in other folders)
