[package]
name = "jfm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tree-sitter = "0.26.8"
tree-sitter-java = "0.23.5"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["filters"] }
